# intranetStage

./: .env.exemple  .gitignore  README.md  pyproject.toml
intranetFA/: manage.py
intranetFA/core/: admin.py  models.py  urls.py  views.py
intranetFA/core/migrations/: 0001_initial.py  0002_rapportactivite.py  0003_remove_rapportactivite_fichier_avif.py
intranetFA/core/services/: auth_backends.py  conversion_avif.py  validators.py
intranetFA/core/templates/core/: organigramme.html  rapports-activite.html
intranetFA/fiche_reflexes/: admin.py  apps.py  models.py  urls.py  views.py
intranetFA/fiche_reflexes/migrations/: 0001_initial.py  0002_alter_fichereflexes_options_and_more.py  0003_rename_fichier_fichereflexes_fichier_pdf.py  0004_alter_fichereflexes_date_ajout_and_more.py
intranetFA/fiche_reflexes/templates/fiche_reflexes/: fiche.html  fiche_index.html
intranetFA/intranetFA/: asgi.py  settings.py  urls.py  wsgi.py
intranetFA/newsletter/: admin.py  models.py  signals.py  tests.py  urls.py  views.py
intranetFA/newsletter/migrations/: 0001_initial.py  0002_alter_article_date_derniere_publication.py
intranetFA/newsletter/services/: sanitize.py
intranetFA/newsletter/templates/newsletter/: _articles_list.html  article.html  index.html  index_outil.html
intranetFA/static/css/: main.css  panzoom.css  reset.css  variables.css
intranetFA/static/css/pages/: article.css  fiche_index.css  header.css  newsletter.css  organigramme.css  (+3 more)
intranetFA/templates/: _header.html  base.html
intranetFA/trombinoscope/: apps.py  services.py  urls.py  views.py
(+2 files in other folders)
